# arduinoPowerFailureAlarm

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md
configuration/: CMakeLists.txt
configuration/gui/: PowerFailureAlarmDialog.ui
configuration/inc/: Contact.h  EmbeddedSettings.h  PowerAlarmDialog.h  ResourcesManager.h  SerialPortAccess.h  qled.h
configuration/resources/: qled.qrc
configuration/src/: Contact.cpp  EmbeddedSettings.cpp  PowerAlarmDialog.cpp  ResourcesManager.cpp  SerialPortAccess.cpp  main.cpp  qled.cpp
embedded/: CMakeLists.txt
embedded/inc/: Contact.h  EmbeddedSettings.h  Led.h  Logger.h  Nokia3310.h  PowerFailureAlarm.h  ResourcesManager.h  Tools.h  n61sms.h
embedded/src/: Contact.cpp  EmbeddedSettings.cpp  Led.cpp  Logger.cpp  Nokia3310.cpp  ResourcesManager.cpp  Tools.cpp  main.cpp
embedded/tools/: .analog_10_0.csv.gp  .analog_20_0.csv.gp  .analog_20_1.csv.gp  .analog_20_2.csv.gp  .analog_20_3.csv.gp  analog_20_0.csv  analog_20_1.csv  analog_20_2.csv  analog_20_3.csv  logger.rb
embedded/tools/inputsTest/: inputsTest.ino
lib/Settings/inc/: PowerFailureAlarmComon.h  Settings.h
lib/Settings/src/: Settings.cpp
